Added retrieve job handler.
