# domain/models_etag.go
@@ -9,6 +9,10 @@ func (c *Collection) ETag() string {
 	return etag(c.Updated)
 }
 
+func (j *JobDefinition) ETag() string {
+	return etag(j.Updated)
+}
+
 func etag(t *time.Time) string {
 	return "\"" + strconv.FormatInt(t.UnixNano()/int64(time.Microsecond), 36) + "\""
 }
