# domain/repository.go
@@ -12,4 +12,5 @@ type Repository interface {
 
 	ListJobs(collectionID string) ([]*JobItem, error)
 	CreateJob(j *JobDefinition) error
+	RetrieveJob(id string) (*JobDefinition, error)
 }
