# infrastructure/http/routes.go
@@ -17,6 +17,7 @@ func (s *Server) Routes() http.Handler {
 
 	r.HandlerFunc("GET", "/jobs", s.listJobs())
 	r.HandlerFunc("POST", "/jobs", s.createJob())
+	r.Handle("GET", "/jobs/:id", s.retrieveJob())
 
 	return r
 }
